--- a/app/src/main/res/layout/fragment_poem.xml
+++ b/app/src/main/res/layout/fragment_poem.xml
@@ -15,14 +15,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.google.android.material.progressindicator.ProgressIndicator
-            android:id="@+id/loadingView"
-            style="@style/Widget.MaterialComponents.ProgressIndicator.Circular.Indeterminate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:visibility="@{viewModel.poem == null ? View.VISIBLE : View.GONE }"
-            tools:visibility="gone" />
+<!--        <com.google.android.material.progressindicator.ProgressIndicator-->
+<!--            android:id="@+id/loadingView"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:visibility="@{viewModel.poem == null ? View.VISIBLE : View.GONE }"-->
+<!--            tools:visibility="gone" />-->
 
         <androidx.core.widget.NestedScrollView
             android:id="@+id/poemLayout"
