Cleaning up a lot of things, reworking the categoryFragment and the poemsPerCategoryListFragment Adding relations and objects to find all Poems for a specific Category Id (pain in the ass to implement)

--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -40,9 +40,11 @@
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/srlRefreshCategories"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            app:onRefreshListener="@{() -> viewModel.getAllCategories()}"
+            app:refreshing="@{viewModel.isRefreshing}">
 
-            <be.appwise.core.ui.custom.RecyclerViewEmptyLoadingSupport
+        <be.appwise.core.ui.custom.RecyclerViewEmptyLoadingSupport
                 android:id="@+id/rvCategories"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
