--- a/app/src/main/res/layout/fragment_poems_per_category.xml
+++ b/app/src/main/res/layout/fragment_poems_per_category.xml
@@ -18,15 +18,15 @@
         android:orientation="vertical"
         tools:context=".ui.home.poemsPerCategoryList.PoemsPerCategoryListFragment">
 
-<!--        <com.google.android.material.progressindicator.ProgressIndicator-->
-<!--            android:id="@+id/loadingView"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:visibility="gone"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toTopOf="parent" />-->
+        <com.google.android.material.progressindicator.CircularProgressIndicator
+            android:id="@+id/loadingView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/emptyView"
@@ -43,10 +43,8 @@
             android:id="@+id/srlRefreshPoemsPerCategory"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:onRefreshListener="@{() -> viewModel.getAllPoemsForCategoryId()}"
+            app:refreshing="@{viewModel.isRefreshing}">
 
             <be.appwise.core.ui.custom.RecyclerViewEmptyLoadingSupport
                 android:id="@+id/rvPoemsPerCategory"
