--- a/app/src/main/res/layout/fragment_poem.xml
+++ b/app/src/main/res/layout/fragment_poem.xml
@@ -11,24 +11,32 @@
             type="com.shahar91.poems.ui.home.poem.PoemViewModel" />
     </data>
 
-    <FrameLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-<!--        <com.google.android.material.progressindicator.ProgressIndicator-->
-<!--            android:id="@+id/loadingView"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_gravity="center"-->
-<!--            android:visibility="@{viewModel.poem == null ? View.VISIBLE : View.GONE }"-->
-<!--            tools:visibility="gone" />-->
+        <include
+            android:id="@+id/mergeToolbar"
+            layout="@layout/toolbar" />
+
+        <!--        <com.google.android.material.progressindicator.ProgressIndicator-->
+        <!--            android:id="@+id/loadingView"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_gravity="center"-->
+        <!--            android:visibility="@{viewModel.poem == null ? View.VISIBLE : View.GONE }"-->
+        <!--            tools:visibility="gone" />-->
 
         <androidx.core.widget.NestedScrollView
             android:id="@+id/poemLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:background="@color/general_background"
+            android:fillViewport="true"
             android:visibility="@{viewModel.poemWithUser == null ? View.GONE : View.VISIBLE }"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            tools:ignore="UnknownIdInLayout"
             tools:visibility="visible">
 
             <LinearLayout
@@ -40,8 +48,8 @@
                 <include
                     android:id="@+id/poemDetail"
                     layout="@layout/reuse_poem_detail"
-                    app:poem="@{viewModel.poemWithUser.poem.body}"
                     app:author="@{viewModel.poemWithUser.user.username}"
+                    app:poem="@{viewModel.poemWithUser.poem.body}"
                     app:title="@{viewModel.poemWithUser.poem.title}" />
 
                 <com.shahar91.poems.ui.custom.NoReview
@@ -89,5 +97,5 @@
                     tools:listitem="@layout/list_item_review" />
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
-    </FrameLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
