--- a/app/src/main/res/layout/activity_add_poem.xml
+++ b/app/src/main/res/layout/activity_add_poem.xml
@@ -1,107 +1,120 @@
 <?xml version="1.0" encoding="utf-8"?><!--https://medium.com/over-engineering/hands-on-with-material-components-for-android-chips-21dc67c8b956-->
 <!--https://medium.com/material-design-in-action/chips-material-components-for-android-46001664a40f-->
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.add.AddPoemActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/ablAddPoem"
+    <data>
+        <variable
+            name="viewModel"
+            type="com.shahar91.poems.ui.add.AddPoemViewModel" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:stateListAnimator="@animator/appbar_always_elevated"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent"
+        tools:context=".ui.add.AddPoemActivity">
 
-        <include layout="@layout/toolbar" />
-
-    </com.google.android.material.appbar.AppBarLayout>
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:fillViewport="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ablAddPoem">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/clParent"
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/ablAddPoem"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:stateListAnimator="@animator/appbar_always_elevated"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/tilPoemTitle"
-                style="@style/CommonTextInput"
+            <include
+                android:id="@+id/activityToolbar"
+                layout="@layout/toolbar" />
+
+        </com.google.android.material.appbar.AppBarLayout>
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:fillViewport="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/ablAddPoem">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/clParent"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                app:layout_constraintTop_toTopOf="parent">
+                android:layout_height="wrap_content">
 
-                <!-- The padding is needed because of the custom height of the inputLayout -->
-                <com.google.android.material.textfield.TextInputEditText
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/tilPoemTitle"
+                    style="@style/CommonTextInput"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/add_poem_hint_title"
-                    android:inputType="textCapSentences"
-                    android:paddingTop="12dp"
-                    android:paddingBottom="10dp" />
-            </com.google.android.material.textfield.TextInputLayout>
+                    android:layout_marginTop="12dp"
+                    app:layout_constraintTop_toTopOf="parent">
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/tilPoemBody"
-                style="@style/CommonTextInput"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginTop="18dp"
-                app:layout_constraintTop_toBottomOf="@id/tilPoemTitle">
+                    <!-- The padding is needed because of the custom height of the inputLayout -->
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/add_poem_hint_title"
+                        android:inputType="textCapSentences"
+                        android:text="@={viewModel.poemTitle}"
+                        android:paddingTop="12dp"
+                        android:paddingBottom="10dp" />
+                </com.google.android.material.textfield.TextInputLayout>
 
-                <!-- The padding is needed because of the custom height of the inputLayout -->
-                <com.google.android.material.textfield.TextInputEditText
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/tilPoemBody"
+                    style="@style/CommonTextInput"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_marginTop="18dp"
+                    app:layout_constraintTop_toBottomOf="@id/tilPoemTitle">
+
+                    <!-- The padding is needed because of the custom height of the inputLayout -->
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
+                        android:hint="@string/add_poem_hint_body"
+                        android:inputType="textMultiLine|textCapSentences"
+                        android:text="@={viewModel.poemBody}"
+                        android:minLines="15"
+                        android:paddingTop="12dp"
+                        android:paddingBottom="10dp" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/tilPoemCategory"
+                    style="@style/CommonTextInput"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
-                    android:hint="@string/add_poem_hint_body"
-                    android:inputType="textMultiLine|textCapSentences"
-                    android:minLines="15"
-                    android:paddingTop="12dp"
-                    android:paddingBottom="10dp" />
-            </com.google.android.material.textfield.TextInputLayout>
+                    android:layout_marginTop="18dp"
+                    android:layout_marginBottom="24dp"
+                    app:layout_constraintBottom_toTopOf="@id/btnSavePoem"
+                    app:layout_constraintTop_toBottomOf="@id/tilPoemBody"
+                    app:layout_constraintVertical_bias="0">
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/tilPoemCategory"
-                style="@style/CommonTextInput"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="18dp"
-                android:layout_marginBottom="24dp"
-                app:layout_constraintBottom_toTopOf="@id/btnSavePoem"
-                app:layout_constraintTop_toBottomOf="@id/tilPoemBody"
-                app:layout_constraintVertical_bias="0">
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/atvCategory"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:focusable="false"
+                        android:focusableInTouchMode="false"
+                        android:hint="Categories"
+                        android:inputType="none"
+                        android:longClickable="false"
+                        android:paddingTop="12dp"
+                        android:paddingBottom="10dp" />
+                </com.google.android.material.textfield.TextInputLayout>
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/atvCategory"
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btnSavePoem"
+                    style="@style/Widget.MaterialComponents.Button.General"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:focusable="false"
-                    android:focusableInTouchMode="false"
-                    android:hint="Categories"
-                    android:inputType="none"
-                    android:longClickable="false"
-                    android:paddingTop="12dp"
-                    android:paddingBottom="10dp" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btnSavePoem"
-                style="@style/Widget.MaterialComponents.Button.General"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/entry_button_height"
-                android:layout_marginBottom="12dp"
-                android:text="@string/add_poem_button_save"
-                app:layout_constraintBottom_toBottomOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+                    android:layout_height="@dimen/entry_button_height"
+                    android:layout_marginBottom="12dp"
+                    android:text="@string/add_poem_button_save"
+                    app:layout_constraintBottom_toBottomOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </ScrollView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
