--- a/app/src/main/res/layout/fragment_poems_per_category.xml
+++ b/app/src/main/res/layout/fragment_poems_per_category.xml
@@ -18,15 +18,19 @@
         android:orientation="vertical"
         tools:context=".ui.home.poemsPerCategoryList.PoemsPerCategoryListFragment">
 
+        <include
+            android:id="@+id/mergeToolbar"
+            layout="@layout/toolbar" />
+
         <com.google.android.material.progressindicator.CircularProgressIndicator
             android:id="@+id/loadingView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:indeterminate="true"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintBottom_toBottomOf="@id/srlRefreshPoemsPerCategory"
+            app:layout_constraintEnd_toEndOf="@id/srlRefreshPoemsPerCategory"
+            app:layout_constraintStart_toStartOf="@id/srlRefreshPoemsPerCategory"
+            app:layout_constraintTop_toTopOf="@id/srlRefreshPoemsPerCategory" />
 
         <TextView
             android:id="@+id/emptyView"
@@ -34,17 +38,20 @@
             android:layout_height="wrap_content"
             android:text="No poems could be loaded for this category"
             android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintBottom_toBottomOf="@id/srlRefreshPoemsPerCategory"
+            app:layout_constraintEnd_toEndOf="@id/srlRefreshPoemsPerCategory"
+            app:layout_constraintStart_toStartOf="@id/srlRefreshPoemsPerCategory"
+            app:layout_constraintTop_toTopOf="@id/srlRefreshPoemsPerCategory" />
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/srlRefreshPoemsPerCategory"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
             app:onRefreshListener="@{() -> viewModel.getAllPoemsForCategoryId()}"
-            app:refreshing="@{viewModel.isRefreshing}">
+            app:refreshing="@{viewModel.isRefreshing}"
+            tools:ignore="UnknownIdInLayout">
 
             <be.appwise.core.ui.custom.RecyclerViewEmptyLoadingSupport
                 android:id="@+id/rvPoemsPerCategory"
